plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.1.38'
}

repositories {
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

sourceSets.main.resources {
    srcDir 'src/generated/resources'
    exclude '**/*.bbmodel'
    exclude 'src/generated/**/.cache'
}

runs {
    configureEach {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'
        workingDirectory project.layout.projectDirectory.dir('run').dir(name)
        modSource project.sourceSets.main
        dependencies {
            runtime "org.postgresql:postgresql:${postgresql_jdbc_version}"
            runtime "com.zaxxer:HikariCP:${hikaricp_version}"
        }
    }

    client {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
    }

    server {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        argument '--nogui'
    }

    data {
        arguments.addAll '--mod', project.mod_id, '--all',
                '--output', file('src/generated/resources/').absolutePath,
                '--existing', file('src/main/resources/').absolutePath
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

runs.configureEach {
    runtimeClasspath.from(configurations.localRuntime)
}

tasks.withType(JavaExec).matching { it.name.startsWith('run') }.configureEach {
    classpath += configurations.localRuntime
}

dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"
    implementation "org.postgresql:postgresql:${postgresql_jdbc_version}"
    implementation "com.zaxxer:HikariCP:${hikaricp_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    runtimeOnly "org.postgresql:postgresql:${postgresql_jdbc_version}"
    runtimeOnly "com.zaxxer:HikariCP:${hikaricp_version}"
    localRuntime "org.postgresql:postgresql:${postgresql_jdbc_version}"
    localRuntime "com.zaxxer:HikariCP:${hikaricp_version}"
    localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    jarJar(group: 'org.postgresql', name: 'postgresql') {
        version {
            prefer postgresql_jdbc_version
        }
    }
    jarJar(group: 'com.zaxxer', name: 'HikariCP') {
        version {
            prefer hikaricp_version
        }
    }
}

tasks.withType(ProcessResources).configureEach {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('jarJar').configure {
    archiveClassifier = 'neoforge'
}
